src/app/components/todo-item/todo-item.component.scss
.del {
    background-color: #ff3333;
    color: #fff;
    border: none;
    cursor: pointer;
    font-weight: 600;
    height: 20px;
    line-height: 19px;
    width: 20px;
    text-align: center;

    &:hover{
      background-color: #ff6666;
    }
  }
  
  .todo-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background: white;
    padding: 0.4em 1.5em;
    border-bottom: 1px #ccc dotted;
  }

  p{
    display: inline-block;
    text-align: left;
    padding-left: 1.75rem;
  }
  
  .is-complete {
    text-decoration: line-through;

  }

  .checkbox-container {
  display: inline-block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 16px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  }
  
  /* Hide the browser's default checkbox */
  .checkbox-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
  }
  
  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 20px;
    width: 20px;
    background-color: #ccc;
  }
  
  /* On mouse-over, add a grey background color */
  .checkbox-container:hover input ~ .checkmark {
    background-color: #e6e6e6;
  }
  
  /* When the checkbox is checked, add a blue background */
  .checkbox-container input:checked ~ .checkmark {
    background-color: #94CD5E;
    &:hover{
      background-color:#b1db8a;
    }
  }
  
  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* Show the checkmark when checked */
  .checkbox-container input:checked ~ .checkmark:after {
    display: inline-block;
  }
  
  /* Style the checkmark/indicator */
  .checkbox-container .checkmark:after {
    left: 7px;
    top: 4px;
    width: 4px;
    height: 8px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }

